--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,23 @@
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=123456
-spring.datasource.url=jdbc:mariadb://localhost:3306/board
+spring.datasource.url=jdbc:mariadb://localhost:3306/db_finalproject_4th
+
+#server:
+#    port:8080
+#
+#spring:
+#    datasource:
+#        driver-class-name: com.mysql.cj.jdbc.Driver
+#        url: jdbc:mysql://localhost:3306/db_finalproject_4th?serverTimzone=Asia/Seoul&characterEncoding=UTP-8
+#        username: root
+#        password:123456
+#    thymeleaf:
+#        cache: false
+#
+#    jpa:
+#        database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+#        open-in-view: flase
+#        show-sql:true
+#        hibernate:
+#            ddl-auto:create
