--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,12 @@
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.username=root
+spring.datasource.username=user_mychef
 spring.datasource.password=123456
-spring.datasource.url=jdbc:mariadb://localhost:3306/db_finalproject_4th
+spring.datasource.url=jdbc:mariadb://localhost:3306/db_finalProject4th
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.open-in-view=false
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
 
 #server:
 #    port:8080
